syntax="proto3";

package sync;

import "github.com/pmker/yux/common/proto/jobs/jobs.proto";


service SyncEndpoint{
    rpc TriggerResync(ResyncRequest) returns (ResyncResponse){};
}

message ResyncRequest{
    string Path = 1;
    bool DryRun = 2;
    jobs.Task Task = 3;
}

message ResyncResponse{
    bool Success = 1;
    string JsonDiff = 2;
    jobs.Task Task = 3;
}